fixing overflow issue

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@
 
 
 #loading-screen{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
